Fix header z-index issue

--- a/console/scss/header.scss
+++ b/console/scss/header.scss
@@ -1,5 +1,5 @@
 header.navbar-gitlab {
-    z-index: 10000;
+    z-index: 1001;
     margin-left: 0;
     background: #0e90d2;
     border-bottom: none;
